--- a/index.css
+++ b/index.css
@@ -27,31 +27,33 @@ header {
   color: rgb(134, 134, 134);
 }
 
-/* Container */
-
-#container {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  gap: 50px;
-}
-
-/* Box left */
-#box-left {
-  color: rgb(134, 134, 134);
+/* Timeline */
+#timeline {
+  position: relative;
+  margin: 2rem 0;
+  padding: 40px;
+  border-left: 2px solid #ccc;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  align-items: center;
 }
 
-/* Box right */
-#box-right {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding-left: 30px;
+.timeline-item {
+  position: relative;
+  margin-bottom: 2rem;
 }
 
+.timeline-item::before {
+  content: "";
+  position: absolute;
+  left: -10px;
+  top: 0.5rem;
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  border: 3px solid balck;
+  border-radius: 50%;
+}
 /* Button container */
 
 .button-container {
