--- a/index.css
+++ b/index.css
@@ -41,7 +41,8 @@ header {
 #timeline::before {
   content: "";
   position: absolute;
-  left: 47.31%;
+  left: 50%;
+  transform: translateX(-50%);
   top: 0;
   bottom: 0;
   width: 2px;
@@ -53,53 +54,35 @@ header {
   margin-bottom: 2rem;
   width: 20%;
   display: flex;
-  width: 40%;
+  gap: 2rem;
+  width: 50%;
 }
 
 .project-date {
   flex: 1;
   color: rgb(134, 134, 134);
+  text-align: right;
+  margin-right: 5%;
 }
 
 .project-name {
   flex: 1;
   font-weight: 500;
+  margin-left: 5%;
 }
 
 .project-name::before {
   content: "";
   position: absolute;
   top: 0.3rem;
-  margin-left: -40px;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: black;
   width: 15px;
   height: 15px;
   border-radius: 100%;
 }
 
-/*
-#timeline::before {
-  content: "";
-  position: absolute;
-  left: 38.2%;
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background-color: black;
-}
-
-.timeline-item::before {
-  content: "";
-  position: absolute;
-  left: -40px;
-  top: 0.5rem;
-  width: 20px;
-  height: 20px;
-  background-color: black;
-  border: 3px solid balck;
-  border-radius: 50%;
-}
-*/
 /* Button container */
 
 .button-container {
@@ -113,4 +96,11 @@ header {
   color: white;
   background-color: black;
   border: none;
+  transform: ;
+}
+
+#btn:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid;
 }
