--- a/index.css
+++ b/index.css
@@ -96,11 +96,12 @@ header {
   color: white;
   background-color: black;
   border: none;
-  transform: ;
+  transition: 1s;
+  box-shadow: 0px 2px 0px black;
 }
 
 #btn:hover {
   background-color: white;
   color: black;
-  border: 2px solid;
+  cursor: pointer;
 }
