--- a/index.css
+++ b/index.css
@@ -32,7 +32,6 @@ header {
   position: relative;
   margin: 2rem 0;
   padding: 40px;
-  border-left: 2px solid #ccc;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,6 +47,8 @@ header {
   width: 2px;
   background-color: black;
 }
+
+/* Timeline items */
 
 .timeline-item {
   position: relative;
